# pdf-lib-rs-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: lib.rs
tests/: test_pdf_lib.py
